🔭 Enable OpenTelemetry tracing